--- a/bUtility.Dapper.Oracle/packages.config
+++ b/bUtility.Dapper.Oracle/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dapper.StrongName" version="1.50.2" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
+  <package id="CreateNewNuGetPackageFromProjectAfterEachBuild" version="1.8.9" targetFramework="net452" developmentDependency="true" />
   <package id="Oracle.ManagedDataAccess" version="12.1.24160719" targetFramework="net452" />
 </packages>
