--- a/bUtility.Dapper.Test/bUtility.Dapper.Test.csproj
+++ b/bUtility.Dapper.Test/bUtility.Dapper.Test.csproj
@@ -66,6 +66,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Helper.cs" />
+    <Compile Include="PeculiarTestClass.cs" />
     <Compile Include="testClass.cs" />
     <Compile Include="UnitTestOracleDb.cs" />
     <Compile Include="UnitTestSql.cs" />
